kanc/src/tests/sample_code/should_fail/multi_file/bind/leaky_use_single/src/foo.k
pub(pack) type Foo {
    c: Foo,
}
